// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Typography renders a Heading with props 1`] = `
<div>
  <h3
    class="css-2m1n73"
    color="red"
    font-family="default"
    font-size="small"
  >
    Heading Three
  </h3>
</div>
`;

exports[`components/Typography renders a Paragraph 1`] = `
<div>
  <p
    class="css-5fjnxu"
    font-family="default"
    font-size="small"
  >
    A paragraph.
  </p>
</div>
`;

exports[`components/Typography renders a Paragraph with props 1`] = `
<div>
  <p
    class="css-rkidbd"
    color="red"
    font-family="default"
    font-size="small"
  >
    Heading Three
  </p>
</div>
`;

exports[`components/Typography renders an H1 1`] = `
<div>
  <h1
    class="css-1qnn9o4"
    color="black"
    font-family="default"
    font-size="large"
    font-weight="600"
  >
    Heading One
  </h1>
</div>
`;

exports[`components/Typography renders an H2 1`] = `
<div>
  <h2
    class="css-1role2c"
    color="black"
    font-family="default"
    font-size="medium"
  >
    Heading Two
  </h2>
</div>
`;

exports[`components/Typography renders an H3 1`] = `
<div>
  <h3
    class="css-vcycx3"
    color="black"
    font-family="default"
    font-size="small"
  >
    Heading Three
  </h3>
</div>
`;
